<resources>

    <!--//Inicio de Sesión-->
    <string name="app_name">HandDoctor</string>
    <string name="textUser">User</string>
    <string name="textPass">Password</string>
    <string name="textIn">Type here</string>
    <string name="btnIn">Log In</string>
    <string name="textRegister">Sign In</string>

    <!--Registro-->
    <string name="textTitle1">Register</string>
    <string name="textName">Name</string>
    <string name="textLastName">LastName</string>
    <string name="textExpedient">Expedient</string>
    <string name="textMail">E-Mail</string>
    <string name="textNumber">Phone</string>
    <string name="btnRegister">Sign in</string>
    <string name="checkDoctor">Doctor</string>
    <string name="checkSecretary">Secretary</string>
    <string name="checkUser">Pacient</string>

    <!--Consulta Médica-->
    <!--Personal-->
    <string name="name">Complete name</string>
    <string name="gender">Gender:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
name="whichChronic">What is the chronic disease?</string>
    <string name="age">Age</string>
    <string name="region">Direction</string>
    <!--Detallada-->
    <string name="medicament">Do you take any medication?</string>
    <string name="whichMedicament">Medication</string>
    <string name="pain">In what area do you have pain?</string>
    <string name="chronic">Do you have a chronic disease?</string>
    <string name="whichChronic">Chronic disease</string>
    <string name="btnSend">Send</string>
    <string name="rbtnYes">Yes</string>
    <string name="rbtnNo">No</string>

    <!--Presentacion Splash-->
    <string name="startApp">¡¡ Welcome !!</string>


    <string name="title_activity_main">ActivityMain</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">LogOut</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_patient">ActivityPatient</string>

    <string name="title_activity_maps">Map</string>


    <string name="textPatName">Apellido Paterno</string>
    <string name="textMotivo">Motivo de cita</string>

</resources>
