<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iteso.handdoctor.ActivityLogin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorLogIng"
    android:paddingTop="50dp"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/imgLogIn"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/hand_doctor_logo"
        />


    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/textUser"
        android:layout_margin="10dp"
        />


    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/textPass"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btnIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnIn"
        android:layout_gravity="center"
        android:onClick="logInBtn"
        />

    <TextView
        android:id="@+id/linkRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textRegister"
        android:textSize="18sp"
        android:onClick="signInLbl"
        />
</LinearLayout>

